Update cost curve figure (just formatting)

--- a/Rmd/cost_analysis_v3.Rmd
+++ b/Rmd/cost_analysis_v3.Rmd
@@ -5,6 +5,7 @@ date: "June 18, 2019"
 header-includes:
   - \usepackage{caption}
 output: pdf_document
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -181,13 +182,6 @@ Probably due to differing methodologies of both food waste rates and environment
 
 \newpage
 
-An alternative way to show the tradeoffs among impact categories resulting from where we reduce waste is shown in the following "radar chart." In this chart, points further from the center indicate greater *reduction* of impacts in that category. 
-This chart shows impact reduction when waste is reduced by 50% in a single stage (Figure 6). It reiterates the point that food service waste reduction would have the greatest benefit for reducing energy use and GHG emissions, while 50% waste reduction in the household consumption and food processing sectors would decrease water use, land use, and eutrophication potential the most. The other three sectors have minimal effects regardless of impact category considered. 
-
-![Effect of FLW reduction at a single stage, shown in radar chart](Q:/figures/sixstage_radar_singlestages.png){ width=55% }
-
-\newpage
-
 # Optimal allocation of funds to reduce food loss and waste to minimize environmental impacts
 
 ## Form of waste abatement versus cost curves for each stage
@@ -236,11 +230,11 @@ $$ W_u = W_0(1 - \frac{A}{N})$$
 We convert the expected diverted waste from a quantity in tons to a percentage which we call $W_{1}$:
 
 $$ W_1 = W_0(1 - \frac{D}{N})$$
-This gives us all the information shown in Figure 7.
+This gives us all the information shown in Figure 6.
 
 ![Information from ReFED and FAO](Q:/figures/makingcostcurve1.png)
 
-Since we know the value of $W$ at $C = 0$, one point on the curve $(C_1, W_1)$, and the lower asymptote $W_u$, we can find the value of $B$ and put a curve through the points as shown in Figure 8. We find $B$ by evaluating the equation for the cost curve, $W(C) = \frac{2(W_0 - W_u)}{e^{bC} + 1} + W_u$, at $(C_1, W_1)$ and solving for $B$:
+Since we know the value of $W$ at $C = 0$, one point on the curve $(C_1, W_1)$, and the lower asymptote $W_u$, we can find the value of $B$ and put a curve through the points as shown in Figure 7. We find $B$ by evaluating the equation for the cost curve, $W(C) = \frac{2(W_0 - W_u)}{e^{bC} + 1} + W_u$, at $(C_1, W_1)$ and solving for $B$:
 
 $$ B = \frac{1}{C_1} \log \bigg( 2\big( \frac{W_0 - W_u}{W_1 - W_u} \big) - 1 \bigg) $$
 
@@ -248,11 +242,11 @@ $$ B = \frac{1}{C_1} \log \bigg( 2\big( \frac{W_0 - W_u}{W_1 - W_u} \big) - 1 \b
 
 It would be desirable to have more data points for each intervention to get a better fit and also to estimate parameter uncertainty stemming from the data.
 
-Separate values for each parameter are calculated for each of the many sectors within each FSC stage. Figure 9 shows the average cost curve for each of the six stages, averaging together all of the sectors within each stage.
+Separate values for each parameter are calculated for each of the many sectors within each FSC stage. Figure 8 shows the average cost curve for each of the six stages, averaging together all of the sectors within each stage.
 
 ![Average abatement cost curve for each supply chain stage](Q:/figures/sixstage_costcurve_refedcurvesbystage.png){ width=50% }
 
-Figure 9 shows that using this method of finding the parameters of the curves, the waste reduction rate flattens out relatively quickly and is relatively modest. As might be expected, this leads to low estimates of impact reduction given investment of food waste reduction (see below).
+Figure 8 shows that using this method of finding the parameters of the curves, the waste reduction rate flattens out relatively quickly and is relatively modest. As might be expected, this leads to low estimates of impact reduction given investment of food waste reduction (see below).
 
 ## Optimization procedure
 
@@ -270,7 +264,7 @@ I ran a separate optimization for four different values of $C_{total}$: 500, 100
 
 ## Results of optimization
 
-Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 10, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and institutional stages, later followed by household and agricultural production stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reducion in those sectors.
+Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 9, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and institutional stages, later followed by household and agricultural production stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reducion in those sectors.
 
 ![Optimal allocations across total cost values and across impact categories](Q:/figures/sixstage_costcurve_allocations4impacts_lineplot.png)
 
@@ -278,7 +272,7 @@ The optimal solution for different values of $C_{total}$ is different depending 
 
 ### Low overall impact reduction values
 
-Unfortunately, the absolute amount of environmental impact reduction estimated for even quite high levels of investment in FLW reduction is extremely anemic, according to this analysis. This is a result of the fairly low maximum waste reduction rate that I estimated from ReFED's numbers, as well as the fairly high cost of getting to that level. Figure 11 shows the reduction in the impact category that is targeted for minimization, relative to the baseline. Most of the reduction is achieved after investing only $500 million, with minimal additional reduction after that. The environmental impacts of the food system are less than 1% smaller in magnitude. From this, we can either conclude that there is little realistic potential for reducing environmental impact of the food system by reducing food waste, or the weak result may be due mostly to overly pessimistic abatement cost curves. Increasing the realism of the cost curves will be a focus of work in the near future.
+Unfortunately, the absolute amount of environmental impact reduction estimated for even quite high levels of investment in FLW reduction is extremely anemic, according to this analysis. This is a result of the fairly low maximum waste reduction rate that I estimated from ReFED's numbers, as well as the fairly high cost of getting to that level. Figure 10 shows the reduction in the impact category that is targeted for minimization, relative to the baseline. Most of the reduction is achieved after investing only $500 million, with minimal additional reduction after that. The environmental impacts of the food system are less than 1% smaller in magnitude. From this, we can either conclude that there is little realistic potential for reducing environmental impact of the food system by reducing food waste, or the weak result may be due mostly to overly pessimistic abatement cost curves. Increasing the realism of the cost curves will be a focus of work in the near future.
 
 ![Reductions in impacts relative to baseline](Q:/figures/sixstage_impactreduction_bytotalinvested.png){ width=50% }
 
